# IEEE-proj1-phase1

./: .gitignore  .pre-commit-config.yaml  README.md  credentials.json  data_generator.py  generate_test_data.py  google_services.py  pyproject.toml  requirements.txt  src.py
